Bastion.tf
# Azure Bastion is a fully-managed platform as a service (PaaS) that provides secure and seamless RDP/SSH connectivity to virtual machines (VMs) running in Azure, without exposing the VMs to the public internet.
# Azure Bastion is deployed to your virtual network and provides a jump server or a bastion host that you can connect to from a web browser to access your VMs securely.
# Azure Bastion integrates natively with Azure Active Directory and provides multi-factor authentication, ensuring secure access to your virtual machines. 
# It also provides a highly available infrastructure that is managed by Microsoft, including automatic scaling, patching, and maintenance of the underlying infrastructure.

resource "azurerm_bastion_host" "example" {
  name                = "example-bastion"
  location            = "westus2"
  resource_group_name = azurerm_resource_group.example.name
  virtual_network_id  = azurerm_virtual_network.example.id
  subnet_id           = azurerm_subnet.example.id
  ip_configuration {
    name                          = "example-ipconfig"
    public_ip_address_id          = azurerm_public_ip.example.id
    subnet_id                     = azurerm_subnet.example.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_public_ip" "example" {
  name                = "example-bastion-public-ip"
  location            = "westus2"
  resource_group_name = azurerm_resource_group.example.name
  allocation_method   = "Dynamic"
}

resource "azurerm_subnet" "example" {
  name                 = "example-subnet"
  resource_group_name  = azurerm_resource_group.example.name
  virtual_network_name = azurerm_virtual_network.example.name
  address_prefixes     = ["10.0.1.0/24"]
}

resource "azurerm_virtual_network" "example" {
  name                = "example-vnet"
  address_space       = ["10.0.0.0/16"]
  location            = "westus2"
  resource_group_name = azurerm_resource_group.example.name
}

resource "azurerm_resource_group" "example" {
  name     = "example-resource-group"
  location = "westus2"
}

# In this example, we define an Azure Bastion instance named "example-bastion" that is deployed to a virtual network named "example-vnet" in the West US 2 region.
# We also define a subnet within the virtual network, a public IP address for the Azure Bastion instance, and a resource group to contain all of the resources.
# Once you have defined your Terraform configuration file, you can run the terraform apply command to deploy the Azure Bastion instance to your Azure environment.
