VirtualMachineScaleSet.tf
# Azure Virtual Machine Scale Set is a service provided by Microsoft Azure that allows you to automatically scale your applications running on virtual machines (VMs) based on the changing demand. 
# Azure Virtual Machine Scale Set creates and manages a group of identical VMs that can automatically increase or decrease based on the demand of your application.

# To create an Azure Virtual Machine Scale Set using Terraform, you need to define the following resources:
# -> Resource Group: A logical container for resources in Azure.
# -> Virtual Network: The virtual network that the scale set will be deployed into.
# -> Load Balancer: The load balancer that will distribute incoming traffic to the VM instances in the scale set.
# -> Virtual Machine Scale Set: The actual VM scale set that will be created in Azure.
# -> Virtual Machine Scale Set Extension: An optional extension that installs and configures software on the VM instances in the scale set.

resource "azurerm_resource_group" "example" {
  name     = "example-resource-group"
  location = "eastus"
}

resource "azurerm_virtual_network" "example" {
  name                = "example-vnet"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name
}

resource "azurerm_subnet" "example" {
  name                 = "example-subnet"
  resource_group_name  = azurerm_resource_group.example.name
  virtual_network_name = azurerm_virtual_network.example.name
  address_prefix       = "10.0.1.0/24"
}

resource "azurerm_virtual_machine_scale_set" "example" {
  name                = "example-vmss"
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name
  sku                 = "Standard_DS1_v2"
  instances           = 2

  storage_profile_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "16.04-LTS"
    version   = "latest"
  }

  os_profile {
    computer_name_prefix = "example"
    admin_username       = "adminuser"
    admin_password       = "Password1234!"
  }
}

# In this example, we are creating a Virtual Machine Scale Set with 2 instances in a resource group called "example-resource-group" in the "eastus" region. 
# We are also creating a virtual network, subnet, and storage profile image reference. 
# The virtual machines in the scale set will use Ubuntu Server 16.04 LTS as the base image, and we are specifying an admin username and password for the machines.
# This is a basic example, and you can add more configuration options such as custom scripts, load balancing, and auto-scaling policies to meet your specific needs.
